@@ -309,7 +309,7 @@ setMethod(f="plot",
                       latitude <- x[["latitude"]]
                       longitude <- x[["longitude"]]
                       jitter <- rnorm(length(latitude), sd=1e-8) # jitter lat by equiv 1mm to avoid colocation
-                      distance <- geodDist(jitter + latitude, longitude, alongPath=TRUE) ## FIXME: jitter should be in imagep
+                      distance <- geodDist(longitude, jitter+latitude, alongPath=TRUE) ## FIXME: jitter should be in imagep
                       depth <- x[["depth"]]
                       a <- x[["a"]]
                       if (despike)
@@ -359,11 +359,11 @@ setMethod(f="plot",
                       latm <- mean(lat, na.rm=TRUE)
                       lonm <- mean(lon, na.rm=TRUE)
                       if (missing(radius))
-                          radius <- max(geodDist(latm, lonm, lat, lon))
+                          radius <- max(geodDist(lonm, latm, lon, lat))
                       else
-                          radius <- max(radius, geodDist(latm, lonm, lat, lon))
-                      km_per_lat_deg <- geodDist(latm, lonm, latm+1, lonm) 
-                      km_per_lon_deg <- geodDist(latm, lonm, latm, lonm+1) 
+                          radius <- max(radius, geodDist(lonm, latm, lon, lat))
+                      km_per_lat_deg <- geodDist(lonm, latm, lonm, latm+1) 
+                      km_per_lon_deg <- geodDist(lonm, latm, lonm+1, latm) 
                       lonr <- lonm + radius / km_per_lon_deg * c(-2, 2)
                       latr <- latm + radius / km_per_lat_deg * c(-2, 2)
                       plot(lonr, latr, asp=asp, type='n',
